# cpp-module-dual-build

./: .clang-format  README.md
01_simpleFunction/: CMakeLists.txt  README.md  main.cpp  myModule.cpp  simpleIntegerReturn.cpp
02_switchBetweenModuleAndHeader/: CMakeLists.txt  README.md  main.cpp  myHeader.cpp  myModule.cpp
02_switchBetweenModuleAndHeader_macro/: .gitignore  CMakeLists.txt  README.md  main.cpp  myHeader.cpp  myModule.cpp
03_switchBetweenModuleAndHeader_fmtStyle/: CMakeLists.txt  README.md  myHeader.cpp  myHeader.hpp  myModule.cpp
04_moduleImplementationUnit/: CMakeLists.txt  main.cpp  myHeader.cpp  myHeader.hpp  myModule.cpp  myModule_impl.cpp
05_multipleHeaders/: CMakeLists.txt  README.md  main.cpp  myHeader1.cpp  myHeader1.hpp  myHeader2.cpp  myHeader2.hpp  myModule.cpp  myModule_impl.cpp
06_multipleLibraries/: CMakeLists.txt  main.cpp
06_multipleLibraries/Lib1/: CMakeLists.txt  Lib1_header1.cpp  Lib1_header2.cpp  Lib1_header2.hpp  Lib1_module_impl.cpp
06_multipleLibraries/Lib2/: CMakeLists.txt  Lib2_header1.cpp  Lib2_header1.hpp  Lib2_header2.cpp  Lib2_header2.hpp  Lib2_module.cpp  Lib2_module_impl.cpp
07_duplicateExternalImports/: CMakeLists.txt  README.md
07_duplicateExternalImports/Lib1/: CMakeLists.txt  Lib1_header1.cpp  Lib1_header1.hpp  Lib1_header2.cpp  Lib1_header2.hpp  Lib1_module.cpp  Lib1_module_impl.cpp
07_duplicateExternalImports/Lib2/: CMakeLists.txt  Lib2_header1.cpp  Lib2_header1.hpp  Lib2_header2.cpp  Lib2_header2.hpp  Lib2_module_impl.cpp
08_eachCppIntoModuleImplUnit/: CMakeLists.txt  README.md  buildAll.sh
08_eachCppIntoModuleImplUnit/Lib1/: CMakeLists.txt  Lib1_header1.cpp  Lib1_header1.hpp  Lib1_header2.cpp  Lib1_header2.hpp  Lib1_module.cpp
08_eachCppIntoModuleImplUnit/Lib2/: CMakeLists.txt  Lib2_header1.cpp  Lib2_header1.hpp  Lib2_header2.cpp  Lib2_header2.hpp  Lib2_module.cpp
09_exportUsing/: CMakeLists.txt  Makefile  README.md  main_importing_Lib1.cpp  main_importing_Lib3.cpp  main_including_Lib1.cpp  main_including_Lib2.cpp
09_exportUsing/Lib1/: CMakeLists.txt  Lib1_header.cpp  Lib1_header.hpp  Lib1_module.cpp
09_exportUsing/Lib2/: CMakeLists.txt  Lib2_header.cpp  Lib2_header.hpp
09_exportUsing/Lib3/: CMakeLists.txt  Lib3_module.cpp
